[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-infer"
version = "0.1.0"
description = "Lightweight multi-paradigm LLM inference engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.24"]
tokenizer = ["transformers>=4.36", "safetensors>=0.4"]

[project.scripts]
nano-infer-api = "nano_infer.entrypoints.openai_api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nano_infer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
